--- a/Test.vcxproj
+++ b/Test.vcxproj
@@ -125,16 +125,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="EndState.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="PauseState.cpp" />
+    <ClCompile Include="SplashState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="constdecl.h" />
+    <ClInclude Include="EndState.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="PauseState.h" />
+    <ClInclude Include="SplashState.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
