buttons don't work, fix tomorrow

--- a/Test.vcxproj
+++ b/Test.vcxproj
@@ -128,6 +128,8 @@
     <ClCompile Include="EndState.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MenuButton.cpp" />
+    <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="PauseState.cpp" />
@@ -138,6 +140,8 @@
     <ClInclude Include="constdecl.h" />
     <ClInclude Include="EndState.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="MenuButton.h" />
+    <ClInclude Include="MenuState.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="PauseState.h" />
